--- a/data/config/settings.json
+++ b/data/config/settings.json
@@ -51,6 +51,9 @@
 			"oceanology":"graphics/icons/tech/oceanology.png",
 			"specialmodifier":"graphics/icons/tech/specialmodifier.png",
 			"stellamanufactorum":"graphics/icons/tech/stellamanufactorum.png",
+			"hypershunt_energy_distribution":"graphics/icons/tech/hypershunt_energy_distribution.png",
+			"megastrcuture_analysis":"graphics/icons/tech/megastrcuture_analysis.png",
+			"supertensile":"graphics/icons/tech/supertensile.png",
 			"ring":"graphics/icons/tech/ring.png",
 			"special":"graphics/icons/tech/specialmodifier.png",
 			"aquaculture_sub":"graphics/icons/tech/subicon_aquaculture.png",
