--- a/data/config/settings.json
+++ b/data/config/settings.json
@@ -60,9 +60,12 @@
 			"ai_core_thesis":"graphics/icons/tech/ai_core_thesis.png",
 			"maglev":"graphics/icons/tech/megalev logistics colorized.png",
 			"oceanology":"graphics/icons/tech/oceanology.png",
+			"dual_market":"graphics/icons/tech/dual_market_system.png",
+			"spaceportI":"graphics/icons/tech/spaceportI.png",
 			"specialmodifier":"graphics/icons/tech/specialmodifier.png",
 			"stellamanufactorum":"graphics/icons/tech/stellamanufactorum.png",
 			"fuelsynth":"graphics/icons/tech/fuelsynth.png",
+			"tourism":"graphics/icons/tech/tourism.png",
 			"hypershunt_energy_distribution":"graphics/icons/tech/hypershunt_energy_distribution.png",
 			"megastrcuture_analysis":"graphics/icons/tech/megastrcuture_analysis.png",
 			"supertensile":"graphics/icons/tech/supertensile.png",
@@ -82,27 +85,22 @@
 			"purification_sub":"graphics/icons/tech/subicon_purificaiton.png",
 			"extractive_sub":"graphics/icons/tech/subicon_extracting.png",
 			"fracking_sub":"graphics/icons/tech/subicon_fracking.png",
-			"sublimation_sub":"graphics/icons/tech/subicon_sublimation.png",
-			"benefication_sub":"graphics/icons/tech/subicon_benefication.png",
+			"tourism_sub":"graphics/icons/tech/subicon_tourism.png",
+			"commerce_sub":"graphics/icons/tech/subicon_commerce.png",
 			"smelting_sub":"graphics/icons/tech/subicon_smelting.png",
-			"crystalizator_sub":"graphics/icons/tech/subicon_crystalizator.png",
 			"isotope_separator_sub":"graphics/icons/tech/subicon_isotope.png",
-			"policrystalizator_sub":"graphics/icons/tech/subicon_policrystalizator.png",
-			"cascade_reprocesor_sub":"graphics/icons/tech/subicon_cascade_reprocessor.png",
+				"crystalizator_sub":"graphics/icons/tech/subicon_crystalizator.png",
 			"blast_processing_sub":"graphics/icons/tech/subicon_blast_processing.png",
-			"cleanroom_sub":"graphics/icons/tech/subicon_cleanroom.png",
 			"lightproduction_sub":"graphics/icons/tech/subicon_lightproduction.png",
 			"consumerindustry_sub":"graphics/icons/tech/subicon_consumerindustry.png",
 			"logisitcbureau_sub":"graphics/icons/tech/subicon_terminus.png",
 			"druglight_sub":"graphics/icons/tech/subicon_bio_drug.png",
-			"shityheavy_sub":"graphics/icons/tech/subicon_shityheavy.png",
+			"underworld_sub":"graphics/icons/tech/subicon_underworld.png",
 			"supplyheavy_sub":"graphics/icons/tech/subicon_civilianheavy.png",
-			"weaponheavy_sub":"graphics/icons/tech/subicon_militaryheavy.png",
 			"aotd_maglev_sub":"graphics/icons/tech/subicon_aotd_maglev.png",
 			"triheavy_sub":"graphics/icons/tech/subicon_triheavy.png",
 			"hegeheavy_sub":"graphics/icons/tech/subicon_hegeheavy.png",
-			"orbitalheavy_sub":"graphics/icons/tech/subicon_orbital_manu.png",
-			"bifrost_sub":"graphics/icons/tech/subicon_bifrost.png",
+			"megaport_sub":"graphics/icons/tech/subicon_megaport.png",
 			"stella_manufactorium_sub":"graphics/icons/tech/subicon_stella.png",
 			"fuelprod_sub":"graphics/icons/tech/subicon_fuelprod.png",
 			"hightech_sub":"graphics/icons/tech/subicon_modula_program.png",
