All kinds of code fixes etc come across reviewing
- Changed "tourism" to "aotd_resort_center"
- Fixed missing graphics in this build
- Fixed bunch of code while reviewing

--- a/data/config/settings.json
+++ b/data/config/settings.json
@@ -65,7 +65,7 @@
 			"specialmodifier":"graphics/icons/tech/specialmodifier.png",
 			"stellamanufactorum":"graphics/icons/tech/stellamanufactorum.png",
 			"fuelsynth":"graphics/icons/tech/fuelsynth.png",
-			"tourism":"graphics/icons/tech/tourism.png",
+			"aotd_resort_center":"graphics/icons/tech/resort_center.png",
 			"hypershunt_energy_distribution":"graphics/icons/tech/hypershunt_energy_distribution.png",
 			"megastrcuture_analysis":"graphics/icons/tech/megastrcuture_analysis.png",
 			"supertensile":"graphics/icons/tech/supertensile.png",
@@ -85,7 +85,7 @@
 			"purification_sub":"graphics/icons/tech/subicon_purificaiton.png",
 			"extractive_sub":"graphics/icons/tech/subicon_extracting.png",
 			"fracking_sub":"graphics/icons/tech/subicon_fracking.png",
-			"tourism_sub":"graphics/icons/tech/subicon_tourism.png",
+			"aotd_resort_center_sub":"graphics/icons/tech/subicon_resort_center.png",
 			"commerce_sub":"graphics/icons/tech/subicon_commerce.png",
 			"smelting_sub":"graphics/icons/tech/subicon_smelting.png",
 			"isotope_separator_sub":"graphics/icons/tech/subicon_isotope.png",
