Terminus fix + "megastrcuture" fix

--- a/data/config/settings.json
+++ b/data/config/settings.json
@@ -67,7 +67,7 @@
 			"fuelsynth":"graphics/icons/tech/fuelsynth.png",
 			"aotd_resort_center":"graphics/icons/tech/resort_center.png",
 			"hypershunt_energy_distribution":"graphics/icons/tech/hypershunt_energy_distribution.png",
-			"megastrcuture_analysis":"graphics/icons/tech/megastrcuture_analysis.png",
+			"megastructure_analysis":"graphics/icons/tech/megastructure_analysis.png",
 			"supertensile":"graphics/icons/tech/supertensile.png",
 			"ring":"graphics/icons/tech/ring.png",
 			"special":"graphics/icons/tech/specialmodifier.png",
@@ -93,7 +93,7 @@
 			"blast_processing_sub":"graphics/icons/tech/subicon_blast_processing.png",
 			"lightproduction_sub":"graphics/icons/tech/subicon_lightproduction.png",
 			"consumerindustry_sub":"graphics/icons/tech/subicon_consumerindustry.png",
-			"logisitcbureau_sub":"graphics/icons/tech/subicon_terminus.png",
+			"aotd_terminus_sub":"graphics/icons/tech/subicon_terminus.png",
 			"druglight_sub":"graphics/icons/tech/subicon_bio_drug.png",
 			"underworld_sub":"graphics/icons/tech/subicon_underworld.png",
 			"supplyheavy_sub":"graphics/icons/tech/subicon_civilianheavy.png",
