Underworld & Blacksite ID Fixes

--- a/data/config/settings.json
+++ b/data/config/settings.json
@@ -95,7 +95,7 @@
 			"consumerindustry_sub":"graphics/icons/tech/subicon_consumerindustry.png",
 			"aotd_terminus_sub":"graphics/icons/tech/subicon_terminus.png",
 			"druglight_sub":"graphics/icons/tech/subicon_bio_drug.png",
-			"underworld_sub":"graphics/icons/tech/subicon_underworld.png",
+			"aotd_underworld_sub":"graphics/icons/tech/subicon_underworld.png",
 			"supplyheavy_sub":"graphics/icons/tech/subicon_civilianheavy.png",
 			"aotd_maglev_sub":"graphics/icons/tech/subicon_aotd_maglev.png",
 			"triheavy_sub":"graphics/icons/tech/subicon_triheavy.png",
