Blast Processing Unit > Fuel Refinery

--- a/data/config/settings.json
+++ b/data/config/settings.json
@@ -90,7 +90,7 @@
 			"smelting_sub":"graphics/icons/tech/subicon_smelting.png",
 			"isotope_separator_sub":"graphics/icons/tech/subicon_isotope.png",
 				"crystalizator_sub":"graphics/icons/tech/subicon_crystalizator.png",
-			"blast_processing_sub":"graphics/icons/tech/subicon_blast_processing.png",
+			"aotd_fuel_refinery_sub":"graphics/icons/tech/subicon_fuel_refinery.png",
 			"lightproduction_sub":"graphics/icons/tech/subicon_lightproduction.png",
 			"consumerindustry_sub":"graphics/icons/tech/subicon_consumerindustry.png",
 			"aotd_terminus_sub":"graphics/icons/tech/subicon_terminus.png",
