Monoculture Plots & Artisanal Farming Fixing

--- a/data/config/settings.json
+++ b/data/config/settings.json
@@ -78,9 +78,9 @@
 			"refining_sub":"graphics/icons/tech/subicon_refinery.png",
 			"heavyindustry_sub":"graphics/icons/tech/subicon_heavyindustry.png",
 			"orbitalworks_sub":"graphics/icons/tech/subicon_orbitalworks.png",
-			"artifarming_sub":"graphics/icons/tech/subicon_artisinal.png",
+			"aotd_artisanal_farming_sub":"graphics/icons/tech/subicon_artisinal.png",
 			"subfarming_sub":"graphics/icons/tech/subicon_subsidized.png",
-			"monoculture_sub":"graphics/icons/tech/subicon_monoculture.png",
+			"aotd_monoculture_plots_sub":"graphics/icons/tech/subicon_monoculture.png",
 			"fishery_sub":"graphics/icons/tech/subicon_fishery.png",
 			"purification_sub":"graphics/icons/tech/subicon_purificaiton.png",
 			"extractive_sub":"graphics/icons/tech/subicon_extracting.png",
