--- a/data/config/settings.json
+++ b/data/config/settings.json
@@ -1,7 +1,7 @@
 {
 	
 	"aotd_tier_1_unlock":false, # Unlock vanilla tier of buildings by default
-	"aotd_tier_2_unlock":false, # Unlock tier 2 of industries ( such as fracking , orbital assembly etc etc) and all bellow this tier.
+	"aotd_tier_2_unlock":false, # Unlock tier 2 of industries ( such as the plasma harvester , orbital assembly etc etc) and all bellow this tier.
 	"aotd_tier_3_unlock":false, # Unlock tier 3 of industries (Benefication , sublimation and all using advanced resources) and all bellow this tier.
 	"aotd_tier_4_unlock":false, # Unlock tier 4 of industries (Skunkwork, Fleetwork , and Blast Processing Unit) and all bellow this tier.
 	"aotd_tier_experimental_unlock":false, #Unlock experimental tier of tech tree and all bellow this tier.
@@ -79,22 +79,22 @@
 			"heavyindustry_sub":"graphics/icons/tech/subicon_heavyindustry.png",
 			"orbitalworks_sub":"graphics/icons/tech/subicon_orbitalworks.png",
 			"aotd_artisanal_farming_sub":"graphics/icons/tech/subicon_artisinal.png",
-			"subfarming_sub":"graphics/icons/tech/subicon_subsidized.png",
+			"aotd_subsidised_farming_sub":"graphics/icons/tech/subicon_subsidised.png",
 			"aotd_monoculture_plots_sub":"graphics/icons/tech/subicon_monoculture.png",
-			"fishery_sub":"graphics/icons/tech/subicon_fishery.png",
+			"aotd_fishing_harbour_sub":"graphics/icons/tech/subicon_fishing_harbour.png",
 			"purification_sub":"graphics/icons/tech/subicon_purificaiton.png",
-			"extractive_sub":"graphics/icons/tech/subicon_extracting.png",
-			"fracking_sub":"graphics/icons/tech/subicon_fracking.png",
+			"aotd_extractive_operation_sub":"graphics/icons/tech/subicon_extractive_operation.png",
+			"aotd_plasma_harvester_sub":"graphics/icons/tech/subicon_plasma_harvester.png",
 			"aotd_resort_center_sub":"graphics/icons/tech/subicon_resort_center.png",
 			"commerce_sub":"graphics/icons/tech/subicon_commerce.png",
-			"smelting_sub":"graphics/icons/tech/subicon_smelting.png",
-			"isotope_separator_sub":"graphics/icons/tech/subicon_isotope.png",
-				"crystalizator_sub":"graphics/icons/tech/subicon_crystalizator.png",
+			"aotd_smelting_sub":"graphics/icons/tech/subicon_smelting.png",
+			"aotd_enrichment_facility_sub":"graphics/icons/tech/subicon_enrichment_facility.png",
+			"aotd_crystalizator_sub":"graphics/icons/tech/subicon_crystalizator.png",
 			"aotd_fuel_refinery_sub":"graphics/icons/tech/subicon_fuel_refinery.png",
-			"lightproduction_sub":"graphics/icons/tech/subicon_lightproduction.png",
+			"aotd_light_production_sub":"graphics/icons/tech/subicon_lightproduction.png",
 			"consumerindustry_sub":"graphics/icons/tech/subicon_consumerindustry.png",
 			"aotd_terminus_sub":"graphics/icons/tech/subicon_terminus.png",
-			"druglight_sub":"graphics/icons/tech/subicon_bio_drug.png",
+			"aotd_druglight_sub":"graphics/icons/tech/subicon_bio_drug.png",
 			"aotd_underworld_sub":"graphics/icons/tech/subicon_underworld.png",
 			"supplyheavy_sub":"graphics/icons/tech/subicon_civilianheavy.png",
 			"aotd_maglev_sub":"graphics/icons/tech/subicon_aotd_maglev.png",
@@ -103,10 +103,10 @@
 			"megaport_sub":"graphics/icons/tech/subicon_megaport.png",
 			"aotd_macro_industrial_complex_sub":"graphics/icons/tech/subicon_macro_industrial_complex.png",
 			"fuelprod_sub":"graphics/icons/tech/subicon_fuelprod.png",
-			"hightech_sub":"graphics/icons/tech/subicon_modula_program.png",
+			"aotd_hightech_industry_sub":"graphics/icons/tech/subicon_hightech_industry.png",
 			"none":"graphics/icons/tech/generic.png",
 			"researched":"graphics/icons/tech/researched.png",
-			"mining_megaplex_sub":"graphics/icons/tech/subicon_mining_megaplex.png",
+			"aotd_mining_megaplex_sub":"graphics/icons/tech/subicon_mining_megaplex.png",
 			"test":"graphics/icons/tech/test.png",
 
 		},
