SO MANY TRAILING COMMAS

--- a/data/config/LunaSettingsConfig.json
+++ b/data/config/LunaSettingsConfig.json
@@ -1,5 +1,5 @@
 {
     "aotd_vok": {
-        "iconPath":"graphics/icons/aotd_vok/VoK_logo.png", 
+        "iconPath":"graphics/icons/aotd_vok/VoK_logo.png"
     }
 }
