--- a/data/config/settings.json
+++ b/data/config/settings.json
@@ -92,11 +92,11 @@
 			"aotd_crystalizator_sub":"graphics/icons/tech/subicon_crystalizator.png",
 			"aotd_fuel_refinery_sub":"graphics/icons/tech/subicon_fuel_refinery.png",
 			"aotd_light_production_sub":"graphics/icons/tech/subicon_lightproduction.png",
-			"consumerindustry_sub":"graphics/icons/tech/subicon_consumerindustry.png",
+			"aotd_commercial_manu_sub":"graphics/icons/tech/subicon_commercial_manu.png",
 			"aotd_terminus_sub":"graphics/icons/tech/subicon_terminus.png",
 			"aotd_druglight_sub":"graphics/icons/tech/subicon_bio_drug.png",
 			"aotd_underworld_sub":"graphics/icons/tech/subicon_underworld.png",
-			"supplyheavy_sub":"graphics/icons/tech/subicon_civilianheavy.png",
+			"aotd_civilian_heavy_prod_sub":"graphics/icons/tech/subicon_civilian_heavy_prod.png",
 			"aotd_maglev_sub":"graphics/icons/tech/subicon_aotd_maglev.png",
 			"triheavy_sub":"graphics/icons/tech/subicon_triheavy.png",
 			"hegeheavy_sub":"graphics/icons/tech/subicon_hegeheavy.png",
